--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,8 +12,9 @@
     tools:context="ru.hustlecity.android.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" android:id="@+id/mainFrame"
+        android:layout_alignParentTop="true">
+    </FrameLayout>
 </RelativeLayout>
