--- a/app/src/main/res/layout/calculator.xml
+++ b/app/src/main/res/layout/calculator.xml
@@ -13,13 +13,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
-
             <TextView
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="@{calculator.place}"
-                android:textSize="128sp"
+                android:text="Классика"
+                android:textSize="16sp"
                 android:textAlignment="center"
                 android:layout_gravity="center_horizontal"
                 android:singleLine="false" />
@@ -27,9 +26,33 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:textSize="128sp"
+                android:textSize="16sp"
                 android:textAlignment="center"
-                android:text="@{calculator.from}"
+                android:text="ДнД"
+                android:layout_gravity="center_horizontal"
+                android:singleLine="false" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="@{calculator.classicPosition}"
+                android:textSize="114sp"
+                android:textAlignment="center"
+                android:layout_gravity="center_horizontal"
+                android:singleLine="false" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textSize="114sp"
+                android:textAlignment="center"
+                android:text="@{calculator.dndPosition}"
                 android:layout_gravity="center_horizontal"
                 android:singleLine="false" />
 
@@ -39,6 +62,29 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.21" />
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="Занятое место" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@{calculator.place}"
+                android:layout_gravity="center_horizontal"
+                android:singleLine="false" />
+
+        </LinearLayout>
         <SeekBar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -52,7 +98,28 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.14" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="Всего пар" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@{calculator.from}"
+                android:layout_gravity="center_horizontal"
+                android:singleLine="false" />
+
+        </LinearLayout>
         <SeekBar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
