--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,34 +3,20 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_dancers"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="@string/action_dancers" />
         <item
             android:id="@+id/nav_calculator"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/action_calculator" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_competitions"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="@string/action_competitions" />
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_disco"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/action_disco" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
-
 </menu>
